# backgrounds

./: bing-wallpapers.cabal  stack.yaml
app/: Main.hs
progress-email/: ChangeLog.md  README.md  package.yaml  stack.yaml
progress-email/src/: ProgressEmail.hs
progress-email/src/ProgressEmail/: Form.hs  Html.hs  Opts.hs  Server.hs  Tupleable.hs  Types.hs
random-movie/: random-movie.cabal  stack.yaml
random-movie/src/: HBORandomMovie.hs  JSONTree.hs
src/: Bing.hs  IfaceLift.hs  MachineUtils.hs  NatGeo.hs  iTerm2Background.scpt
src/System/Console/: Spinners.hs
