name:                bing-wallpapers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/bing-wallpapers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NatGeo
                     , Bing
                     , IfaceLift
                     , System.Console.Spinners
  build-depends:       base
                     , classy-prelude
                     , network
                     , streaming-commons
                     , http-client
                     , resourcet
                     , ansi-terminal
                     , http-client-tls
                     , lens
                     , taggy-lens
                     , taggy
                     , servant-server
                     , http-media
                     , servant-client
                     , aeson
                     , lens-aeson
  default-language:    Haskell2010

executable random-utils
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bing-wallpapers
                     , classy-prelude
                     , conduit
                     , conduit-combinators
                     , resourcet
                     , filepath
                     , process
                     , optparse-applicative
  default-language:    Haskell2010

test-suite bing-wallpapers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bing-wallpapers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bing-wallpapers
